# Bet-Better

./: AUTO_PARLAY_ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DIRECTORY_STRUCTURE.md  EXECUTIVE_SUMMARY.md  FIXES_APPLIED.md  FRONTEND_STARTUP.md  HANDOFF.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENT_PLAN.md  PHASE_2_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.sh  QUICK_START.md  README.md  README_FINAL.md  SETUP_GUIDE.md  SGP_OPTIMIZER_BLUEPRINT.md  START_HERE.md  SYSTEM_VERIFICATION.md  UI_IMPROVEMENTS_SUMMARY.md  docker-compose.yml  live_backend.py  mock_backend.py
.agent/workflows/: ingest_odds.md
backend/: .env  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: utils.py
backend/app/api/dependencies/: database.py
backend/app/api/routes/: auto_parlay.py  games.py  parlay.py  players.py  teams.py
backend/app/core/: config.py
backend/app/models/database/: __init__.py  base.py  correlation.py  game.py  parlay_recommendation.py  player.py  player_marginal.py  team.py  venue.py
backend/app/models/schemas/: parlay.py
backend/app/services/: parlay_service.py
backend/app/services/auto_parlay/: candidate_generator.py  compatibility_engine.py  intent_parser.py  parlay_scorer.py
backend/app/services/copula/: __init__.py  regime.py  simulation.py
backend/app/services/entity_resolution/: resolver.py
backend/app/services/features/: pipeline.py
backend/app/services/odds/: client.py  ingest.py
backend/app/services/xai/: explainer.py
backend/migrations/: env.py
backend/migrations/versions/: 84db2cfe5eb8_initial_schema.py  add_auto_parlay_tables.py
backend/scripts/: generate_full_project.py  ingest_fanduel_data.py  ingest_game_props.py  ingest_real_props.py  init_db.py  odds_worker.py  seed_db.py  seed_live_data.py  seed_nfl.py  seed_super_bowl.py  test_auto_parlay_system.py  test_odds.py
docs/: API_KEYS_GUIDE.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  page.tsx.backup
frontend/components/: AutoParlayBuilder.tsx
frontend/lib/: api.ts  (+1 more)
infrastructure/: prometheus.yml
(+6 files in other folders)
