[tool.poetry]
name = "smartparlay-backend"
version = "0.1.0"
description = "Production-grade SGP optimizer with Student-t Copula simulation"
authors = ["SmartParlay Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Core Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# JAX for high-performance simulation
jax = {extras = ["cpu"], version = "^0.4.23"}
jaxlib = "^0.4.23"

# Scientific Computing
numpy = "^1.26.3"
scipy = "^1.12.0"
pandas = "^2.1.4"

# Database
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}

# Data Validation & Serialization
orjson = "^3.9.12"

# HTTP Clients
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Entity Resolution
thefuzz = "^0.22.1"
python-Levenshtein = "^0.23.0"

# Geolocation
geoip2 = "^4.8.0"

# Monitoring & Observability
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"

# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
hypothesis = "^6.96.1"

# Code Quality
ruff = "^0.1.13"
mypy = "^1.8.0"
black = "^23.12.1"

# Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"

# Background Tasks
celery = {extras = ["redis"], version = "^5.3.4"}

# Streaming
aiokafka = "^0.10.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
jupyter = "^1.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
